--- a/src/css/style.css
+++ b/src/css/style.css
@@ -201,6 +201,18 @@ button {
   grid-row: 2;
   grid-column: 3;
 }
+/* displays number of cart items */
+.item-count {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 5px;
+  font-size: 0.6em;
+  display: none; /* Hidden by default */
+}
 
 @media screen and (min-width: 500px) {
   body {
