--- a/src/css/style.css
+++ b/src/css/style.css
@@ -266,6 +266,34 @@ button {
 }
 /* End discount style */
 
+/* checkout form */
+form fieldset {
+  border: 1px solid var(--light-grey);
+  padding: 0.5em;
+  margin: 0.5em 0;
+  border-radius: 10px;
+  max-width: 500px;
+}
+form legend {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+form label.top {
+  display: block;
+  margin-top: 0.5em;
+}
+form input {
+  display: block;
+  font-size: 1rem;
+}
+
+form input:required {
+  border-color: var(--primary-color);
+}
+
+form input:required:valid {
+  border-color: green;
+}
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
